compiler/tests/success/vpermd.jazz
export
fn test_vpermd(reg u64 tmp)
{
  reg u256 t0 t1;

  t0 = #set0_256();
  t1 = #set0_256();

  t0 = #VPERMD_256(t0, t1);
  (u256)[tmp] = t0;
}
