compiler/tests/fail/stack_allocation/arm-m4/bug_1384b.jazz
export fn stack_bool() {
  #[keep]
  stack bool b = true;
}
